using UnityEngine;

/* [0] 개요 : AnimationString
		- 애니메이션 파라미터를 정의하는 클래스.
*/

namespace My2D
{
	public class AnimationString
	{
		public static string isMoving = "IsMoving";
		public static string isRunning = "IsRunning";
		public static string jumpTrigger = "Jump";
		public static string yVelocity = "YVelocity";
		public static string isGround = "IsGround";
        public static string isCelling = "IsCelling";
        public static string isWall = "IsWall";
		public static string attackTrigger = "Attack";
    }
}

// [1] 
// [2] 
// [3] 
// [ ] - ) 